<resources>
    <string name="app_name">DIY_SmartHouse</string>
    <string name="house_icon">house icon</string>
    <string name="room">Room</string>
    <string name="my_rooms">My Rooms</string>
    <string name="button">Button</string>
    <string name="room_button">Room Button</string>
    <string name="room_list">room list</string>
    <string name="device">Device</string>
    <string name="intensity">Intensity:</string>
    <string name="color">Color:</string>
    <string name="intensity_value">intensity_value</string>
    <string name="color_value">color_value</string>
    <string name="todo">TODO</string>
    <string name="room_temperature">Room Temperature</string>
    <string name="t">T</string>
    <string name="room_humidity">Room Humidity</string>
    <string name="room_temp">Room Temp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_room_list2">RoomList2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="map">Map</string>
    <string name="camera">Camera</string>
</resources>