<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/map"
        android:icon="@drawable/ic_location"
        android:title="Location" />
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_house"
        android:title="House" />
    <item
        android:id="@+id/camera"
        android:icon="@drawable/ic_camera"
        android:title="Camera" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
</menu>