<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/selected_light"
        android:layout_width="280dp"
        android:layout_height="30dp"
        android:text="@string/device"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/intensitySeekBar"
        android:layout_width="280dp"
        android:layout_height="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intensity" />

    <TextView
        android:id="@+id/intensity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intensity"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_light" />

    <TextView
        android:id="@+id/intensity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/intensity_value"
        app:layout_constraintStart_toEndOf="@+id/intensity"
        app:layout_constraintTop_toBottomOf="@+id/selected_light" />

    <SeekBar
        android:id="@+id/colorSeekBar"
        android:layout_width="280dp"
        android:layout_height="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color" />

    <TextView
        android:id="@+id/color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intensitySeekBar" />

    <TextView
        android:id="@+id/color_value"
        android:layout_width="86dp"
        android:layout_height="20dp"
        android:text="@string/color_value"
        app:layout_constraintStart_toEndOf="@+id/color"
        app:layout_constraintTop_toBottomOf="@+id/intensitySeekBar" />

</androidx.constraintlayout.widget.ConstraintLayout>