<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#37474F">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="175dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_lightbulb"
        app:tint="#EDDECD" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="410dp"
        android:layout_height="25dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <TextView
            android:id="@+id/intensity"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/intensity"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/intensity_value"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="0dp"
            android:text="@string/intensity_value"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </TableRow>

    <SeekBar
        android:id="@+id/intensitySeekBar"
        android:layout_width="280dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow" />

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intensitySeekBar">

        <TextView
            android:id="@+id/color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/color_value"
            android:layout_width="86dp"
            android:layout_height="25dp"
            android:text="@string/color_value"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </TableRow>

    <SeekBar
        android:id="@+id/colorSeekBar"
        android:layout_width="280dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow2" />

    <RelativeLayout
        android:id="@+id/ambient"
        android:layout_width="410dp"
        android:layout_height="260dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorSeekBar">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="100dp"
            android:layout_toStartOf="@+id/room_temp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ac_unit"
            app:tint="#EDDECD" />

        <ImageButton
            android:id="@+id/temp_up"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/imageView2"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@android:drawable/arrow_up_float"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/temp_down"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/temp_up"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@android:drawable/arrow_down_float"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

        <TextView
            android:id="@+id/set_temp"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_below="@+id/imageView2"
            android:layout_marginStart="0dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/temp_up"
            android:background="#37474F"
            android:text="@string/t"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TableLayout
            android:id="@+id/room_temp"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/ic_thermostat"
                    app:tint="#EDDECD" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/therm_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#37474F"
                    android:text="@string/room_temp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/temp_value"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:background="#37474F"
                    android:text="@string/t"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="40sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/therm_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#37474F"
                    android:text="@string/room_humidity"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/humidity_value"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="#37474F"
                    android:text="@string/t"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="40sp" />

            </TableRow>
        </TableLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>